--- a/dashboard1.html
+++ b/dashboard1.html
@@ -17,7 +17,7 @@
     <title>Dashboard</title>
   </head>
   <body>
-    <div id="sidebar-menu" class="sidebar-menu">
+    <div id="sidebar-menu" class="sidebar-menu position-relative">
       <div class="menu__header">
         <h4 class="text-center">Tranzyt for Business</h4>
         <h5 class="text-center">Customer Name</h5>
@@ -43,7 +43,7 @@
               <img
                 src="./assets/icons/menu_icons/task_blue.png"
                 alt="tranzits"
-                class="menu__links__img__1"
+                class="menu__links__img__1 ms-1"
               /><a href="dashboard1.html" class="menu__links__item"
                 >All Tranzyts</a
               >
@@ -109,7 +109,7 @@
           </li>
         </ul>
       </div>
-      <div class="menu__footer">
+      <div class="menu__footer position-absolute bottom-0 start-0">
         <p>
           Terms and Conditions <br />
           Privacy Policy <br />
@@ -183,7 +183,7 @@
                 <div
                   class="col-md-3 col-lg-3 col-sm-12 d-flex justify-content-lg-center justify-content-md-between justify-content-sm-center justify-content-center"
                 >
-                  <div class="timeline">
+                  <div class="timeline me-1">
                     <span class="active"></span>
                     <div></div>
                     <span></span>
